# flatten

./: flatten.cabal  stack.yaml
src/: Flatten.hs
test/: 2015-06-29-NW2145A.csv  2015-10-20-NW2145A.csv  output.csv
