name:                flatten
version:             0.1
synopsis:            NS internal tool
description:         NS internal tool
homepage:            
license:             BSD3
license-file:        LICENSE
author:              wkoiking
maintainer:          wanagida@gmail.com
category:            Utility
build-type:          Simple
cabal-version:       >=1.10

executable flatten-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 2.0, intervals, parsec, my-parser
  default-language:    Haskell2010

library
  hs-source-dirs:      src
  exposed-modules:     Flatten
  build-depends:       base >= 2.0, lens, containers, parsec, directory, bytestring, old-time, text, my-parser

  -- Modules not exported by this package.
  -- Other-modules:       
  
  -- Extra tools (e.g. alex, hsc2hs, ...) needed to build the source.
  -- Build-tools:         

test-suite flatten-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , intervals
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

-- source-repository head
--   type:     git
--   location: https://github.com/githubuser/my-project
